--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -147,7 +147,7 @@ Learn from our championship journey and discover what it takes to compete at the
     description="Follow our weekly progression through the 2025 season. Detailed insights into our design process, challenges overcome, and lessons learned."
     href="/Experiences/2025"
     gradient="linear-gradient(135deg, #f59e0b 0%, #d97706 100%)"
-    customStyles={{ color: 'white', boxShadow: '0 -10px 20px rgba(255, 255, 255, 0.3)' }}
+    customStyles={{backgroundColor: "rgba(123, 54, 180, 0.13)", color: 'white', boxShadow: '0 -10px 20px rgba(255, 255, 255, 0.3)' }}
 
 />
 
@@ -158,7 +158,7 @@ Learn from our championship journey and discover what it takes to compete at the
     description="Comprehensive safety protocols and systems that ensure safe robot operation in all environments. Industry-leading safety standards."
     href="/Experiences/RSS"
     gradient="linear-gradient(135deg, #ef4444 0%, #dc2626 100%)"
-    customStyles={{ color: 'white', boxShadow: '0 -10px 20px rgba(255, 255, 255, 0.3)' }}
+    customStyles={{backgroundColor: "rgba(123, 54, 180, 0.13)", color: 'white', boxShadow: '0 -10px 20px rgba(255, 255, 255, 0.3)' }}
 
 />
 
@@ -169,7 +169,7 @@ Learn from our championship journey and discover what it takes to compete at the
     description="Deep dive into our robot design methodology, from concept to championship performance. Engineering excellence in every component."
     href="/Experiences/Robot_Design/robotDesign"
     gradient="linear-gradient(135deg, #8b5cf6 0%, #7c3aed 100%)"
-    customStyles={{ color: 'white', boxShadow: '0 -10px 20px rgba(255, 255, 255, 0.3)' }}
+    customStyles={{backgroundColor: "rgba(123, 54, 180, 0.13)", color: 'white', boxShadow: '0 -10px 20px rgba(255, 255, 255, 0.3)' }}
 
 />
 
